...
              ? result.error.developerMessage
              : result.error.message
          );
          Alert.alert('Onramp Configuration Error', result.error.message);
        } else {
          console.log('Onramp configured successfully.');
          Alert.alert('Success', 'Onramp configured successfully.');
        }
      })
      .catch((error) => {
        console.error('Error configuring Onramp:', error.message);
        Alert.alert('Onramp Configuration Error', error.message);
      });
...
    },
    [navigation]
  );

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
                navigation.navigate('PaymentSheetWithSetupIntent');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (multi-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICustomScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              title="Checkout Sessions (private preview)"
              onPress={() => navigation.navigate('CheckoutPlaygroundScreen')}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (EmbeddedPaymentElement)"
              onPress={() => {
                navigation.navigate('EmbeddedPaymentElementScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (EmbeddedPaymentElement - immediateAction rowSelectionBehavior)"
              onPress={() => {
                navigation.navigate(
                  'EmbeddedPaymentElementImmediateActionScreen'
                );
              }}
            />
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="More payment scenarios">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Set up future payments"
              onPress={() => {
                navigation.navigate('SetupFuturePaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Finalize payments on the server"
              onPress={() => {
                navigation.navigate('NoWebhookPaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Wallets">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Alipay"
              onPress={() => {
                navigation.navigate('AlipayPaymentScreen');
...
            />
          </View>

          {Platform.OS === 'ios' && (
            <View style={styles.buttonContainer}>
              <Button
                title="Apple Pay"
                onPress={() => {
                  navigation.navigate('ApplePayScreen');
                }}
              />
            </View>
          )}
...
            />
          </View>

          {Platform.OS === 'android' && (
            <View style={styles.buttonContainer}>
              <Button
                title="Google Pay"
                onPress={() => {
                  navigation.navigate('GooglePayScreen');
                }}
              />
            </View>
          )}
...
                Alert.alert('WeChat Pay is not yet supported.');
              }}
            />
          </View>
        </>
      </Collapse>
      <Collapse title="Financial Connections">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Collect Bank Account"
              onPress={() => {
                navigation.navigate('CollectBankAccountScreen');
              }}
            />
          </View>
        </>
...
                  handleNavigateToOnramp('RegisterCryptoUserScreen');
                }}
              />
            </View>
          </>
        </Collapse>
        <Collapse title="Payment Method Messaging Element">
          <>
            <View style={styles.buttonContainer}>
              <Button
                title="PMME"
                onPress={() => {
                  navigation.navigate('PaymentMethodMessagingElementScreen');
                }}
              />
            </View>
          </>
...
