...
  }

  private fun onGooglePayReady(isReady: Boolean) {
    if (isReady) {
      val activity = getCurrentActivityOrResolveWithError(promise) ?: return
      if (!activity.lifecycle.currentState.isAtLeast(Lifecycle.State.STARTED)) {
        callback(null, createError(GooglePayErrorType.Canceled.toString(), "Google Pay has been canceled"))
        return
      }
      when (mode) {
        Mode.ForSetup -> {
          launcher?.presentForSetupIntent(clientSecret, currencyCode, amount?.toLong(), label)
        }
...
