...
          value={customerKeyType === 'customer_session'}
          onValueChange={toggleCustomerKeyType}
        />
        <Button
          variant="primary"
          loading={loading}
          title={'Choose payment method'}
          disabled={!paymentSheetEnabled}
          onPress={choosePaymentOption}
        />
        <SelectedPaymentOption paymentOption={paymentMethod} />

        <Button
          variant="primary"
          loading={loading}
          title={'Trigger timeout'}
          disabled={!paymentSheetEnabled}
          onPress={async () => {
            setLoading(true);
            const { error } = await presentPaymentSheet({ timeout: 5000 });
            if (error) {
              Alert.alert(`${error.code}`, error.message);
...
