...
            autoCapitalize="none"
          />
        )}
        <Button
          variant="primary"
          onPress={handleCollectTokenPress}
          title={!clientSecret ? 'loading...' : 'Collect token'}
          loading={loading || consentLoading}
          disabled={!clientSecret || consentLoading}
        />
        <Button
          variant="primary"
          onPress={handleCollectSessionPress}
          title={!clientSecret ? 'loading...' : 'Collect session'}
          loading={loading || consentLoading}
          disabled={!clientSecret || consentLoading}
        />
        {eventLog && <EventLogView log={eventLog} />}
      </PaymentScreen>
      {pendingConsent && (
...
