appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Accept a payment"
- tapOn: "Prebuilt UI (multi-step)"
- extendedWaitUntil:
    visible: "Choose payment method"
    timeout: 150000
- tapOn:
    text: "Choose payment method"
- extendedWaitUntil:
    visible: "TEST"
    timeout: 150000
- tapOn:
    id: "UIButton.Close"
- assertVisible:
    text: .*anceled.*
- tapOn: "OK"
