appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Payment Method Messaging Element"
- tapOn: "PMME"
- extendedWaitUntil:
    visible: "State: loaded"
    timeout: 150000
- assertVisible:
    text: ".*4 interest-free payments of \\$2\\.50 with.* See plans.*"
- tapOn: ".*4 interest-free payments of \\$2\\.50 with.* See plans.*"
- extendedWaitUntil:
    visible: "Choose how you want to pay"
    timeout: 150000
- assertVisible:
    text: "Choose how you want to pay"

