appId: ${APP_ID}
---
- launchApp
- tapOn: "Financial Connections"
- tapOn: "Collect Bank Account"
- assertVisible:
    text: "Collect session"
- tapOn:
    text: "Collect session"
    retryTapIfNoChange: false
- assertVisible:
    text: "Manually verify instead"
- tapOn: "Manually verify instead"
- assertVisible:
    text: "Use test account"
- tapOn: "Use test account"
# Hide the keyboard on iOS by tapping outside the text field
- assertVisible:
    text: "Save account with Link"
    optional: true
- tapOn: "Save account with Link"
- assertVisible:
    text: "Not now"
- tapOn: "Not now"
- assertVisible:
    text: "Done"
- tapOn: "Done"
- assertVisible:
    text: "Success"
- tapOn:
    text: "OK"
    optional: true
